# BaseballSimulator

./: .gitignore  README.md  processData.py  sendData1.sh  sendDataG.sh  template.sh
BaseballSim/BaseballSim/: main.cpp
BaseballSim/BaseballSim.xcodeproj/: project.pbxproj
KalmanGit/: 3DPlotComparision.py  FullSystemSimulation.py  SimNoisySensorInput.csv  UKF(ts)(FrontFacing).py
KalmanGit/CSV/: 3DPlotComparision.py  Angular.csv  FullSystemSimulation.csv  FullSystemSimulation.py  KalmanFilterErrorDebug.csv  KalmanFilterPosition.csv  KalmanFilterPositionSmooth.csv  MeasuredPosition.csv  SimNoisySensorInput.csv  Spin.csv  TrajectoryCalculator3D.py  TrajectoryDataPosition.csv  UKF(ts)(FrontFacing).py
KalmanGit/JSON/: KalmanFilterErrorDebug.csv  (+3 more)
backend/: .app.py.swp  README.md  app.py  package-lock.json  package.json  pitch.py  requirements.txt  serverless.yml  utils.py  vector3D.py
baseball-simulator/: AruCoDetection.cpp  BaseballSimulator.cpp  BaseballSimulator.h  CMakeCache.txt  CMakeLists.txt  Camera.cpp  Camera.h  CameraCalibration.h  D400.cpp  D400.h  DataStructure.cpp  DataStructure.h  FeatureAnalysis.cpp  FeatureAnalysis.h  ImageData.cpp  ImageData.h  ImageOptimization.cpp  ImageReconditioning.cpp  ImageReconditioning.h  JsonifyData.h  LocPredictor.cpp  LocPredictor.h  MainTestingRoutine.cpp  Makefile  Post.hpp  PseudoTracker.cpp  PseudoTracker.h  RotationMatrix.xml  SimpleSpin.cpp  ThresholdFilter.cpp  ThresholdFilter.h  Tracker.cpp  Tracker.h  V2.h  Visualize.cpp  Visualizer.cpp  Visualizer.h  cmake_install.cmake  main.cpp  post.h  (+8 more)
baseball-simulator/Archives V1/: Test.cpp  stagnantTestingWithCalib.cpp
baseball-simulator/Archives V1/BaseballSimulatorScripts/: ChessboardCalibration.cpp  ChessboardCalibrationClassTest.cpp  SIFT&Match.cpp  TFSubtraction.cpp
baseball-simulator/BaseballSimulatorScripts/: AruCoBall.cpp  BallTrack.cpp  ChessboardCalibration.cpp  FrameRecorder.cpp  PointToPixelPrj.cpp  testFrameDrops.cpp
frontend/: package-lock.json  package.json
(+53 files in other folders)
